# alpha-ai

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
tools/: config.py  general_tool.py  huggingface_tool.py  pet_names_tool.py  wikipedia_tool.py  youtube_tool.py
